# sophee-agent

./: .env.example  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  check_session.py  check_tables.py  cleanup_riso.py  extract.py  fastapi_endpoints.md  fetch_pi_session.py  headers_auth_min.json  pi_logs.txt  pyproject.toml  recent_logs.txt  scratch_test_interactions.py  sec.py  skills-lock.json  test_api.py  test_gen.py  test_image.py  test_image_dict.py  test_image_dict2.py  test_image_tools.py  test_multimodal.py  update_fastapi.py
.agents/: AGENTS.md  skills.json
app/: __init__.py  adventure_tools.py  agent.py  artists_catalog.json  auth.py  db.py  fast_api_app.py  image_tools.py  musicbrainz_tools.py  radio_orchestration.py  radio_state.py  radio_tools.py  suggestion_box.py  tools.py  user_tools.py  ytmusic_tools.py
app/app_utils/: telemetry.py  typing.py
app/prompts/: art_director.md  dj_agent.md  dm_agent.md  general_assistant.md  music_expert.md  researcher.md  root_agent.md
bot/: __init__.py  artifact_helpers.py  audio.py  cache.py  client.py  history.py  message_utils.py  rate_limiter.py  views.py
scripts/: auth_ytmusic.py  clear_slash_commands.py
static/: app.js  index.css  index.html
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_server_e2e.py
