[project]
name = "sophee-agent"
version = "0.1.0"
description = "Sophee — AI-powered Discord radio DJ, art director, and assistant built on Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[gcp,db]>=2.0.0",
    "discord.py[voice]",
    "yt-dlp[default]",
    "requests",
    "PyNaCl",
    "python-dotenv",
    "aiosqlite",
    "ytmusicapi",
    "Pillow",
    "numpy",
    "opencv-python-headless",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "nest-asyncio",
]
eval = [
    "google-adk[eval]",
    "google-cloud-aiplatform",
]
lint = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]
